--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-native-order-children",
   "version": "1.1.2",
   "description": "Orders the children of the component by the \"order\" prop unless otherwise defined by providing it with a prop \"by\"",
-  "main": "Order.js",
-  "scripts": {
-    "test": "<Order direction='column'><View order={2}><Text>1</Text></View><View order={1}><Text>2</Text></View></Order>"
+  "main": "index.ios.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DashOS/react-native-simple-event-stream"
   },
   "keywords": [
     "react-native",
@@ -15,10 +16,6 @@
   ],
   "peerDependencies": {
     "react-native": ">=0.5.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DashOS/react-native-order-children"
   },
   "author": "Braden R. Napier",
   "license": "ISC"
